[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://car.tscn" type="PackedScene" id=2]
[ext_resource path="res://goal.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
car = ExtResource( 2 )
car_population = 20

[node name="Goal" type="Sprite" parent="."]
position = Vector2( 270, 350 )
texture = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 1022.91, 604.208 )
current = true
zoom = Vector2( 2, 2 )

[node name="StartPos" type="Position2D" parent="."]
position = Vector2( 1710, 580 )

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
